slurm-51.out
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/Hyperasexamplerun.py", line 83
    model.add(Activation({{choice([,'sigmoid'])}}))
                                   ^
SyntaxError: invalid syntax
